--- a/src/components/MenuButton/MenuButton.module.scss
+++ b/src/components/MenuButton/MenuButton.module.scss
@@ -1,3 +1,4 @@
+@import "~monday-ui-style/dist/mixins";
 @import "../../styles/themes";
 @import "../../styles/typography";
 @import "../../styles/global-css-settings";
@@ -38,19 +39,19 @@
 .size16 {
   width: 16px;
   height: 16px;
-  @include font-input();
+  @include vibe-text(small, normal);
 }
 
 .size24 {
   width: 24px;
   height: 24px;
-  @include font-paragraph();
+  @include vibe-text(medium, normal);
 }
 
 .size32 {
   width: 32px;
   height: 32px;
-  @include font-paragraph();
+  @include vibe-text(medium, normal);
 }
 
 .size40 {
