--- a/src/components/MultiStepIndicator/components/StepIndicator/StepIndicator.module.scss
+++ b/src/components/MultiStepIndicator/components/StepIndicator/StepIndicator.module.scss
@@ -1,11 +1,11 @@
+@import "~monday-ui-style/dist/mixins";
 @import "../../../../styles/themes";
 @import "../../../../styles/typography";
 @import "../../../../styles/keyframes";
 
 .indicator {
-  @include theme-prop(color, text-color-on-primary);
-  font-size: var(--font-size-general-label);
-  font-family: var(--font-family);
+  @include vibe-text(small, normal);
+  color: var(--text-color-on-primary);
   display: flex;
   margin: 0;
   padding: 0;
@@ -37,18 +37,13 @@
 
 .textContainerTitleText {
   @include vibe-text("medium", "bold");
-  font-size: 14px;
-  font-weight: 600;
-  line-height: 20px;
   @include theme-prop(color, primary-text-color);
   margin-bottom: 2px;
 }
 
 .textContainerSubtitleText {
   width: 100%;
-  font-size: var(--font-size-general-label);
-  font-family: var(--font-family);
-  font-weight: var(--font-weight-normal);
+  @include vibe-text("small", "normal");
   color: var(--primary-text-color);
 }
 .sizeCompactTextContainerTitle{
@@ -75,8 +70,7 @@
 
 .sizeCompactTextContainerTitleText {
   display: block;
-  font-size: var(--font-size-20);
-  font-weight: var(--font-weight-normal);
+  @include vibe-text(small, normal);
   max-width: 150px;
   overflow: hidden;
   white-space: nowrap;
