--- a/src/config/tokens/themes/basic/palette/_palette.scss
+++ b/src/config/tokens/themes/basic/palette/_palette.scss
@@ -10,7 +10,7 @@ $color-highlight_blue: #cce5ff;
 $color-sky_blue: #aed4fc;
 
 // - Semantics
-$color-basic_green: #258750;
+$color-basic_green: #00854d;
 $color-dark_green: #007038;
 $color-pastel_green: #bbdbc9;
 $color-olive_green: #b5cec0;
