Create mixins for typography (#217)
* add support in export mixins in monday ui styles

* Update src/internal-mixins/_utilities.scss

* fix mixins

* change mixins script

* change mixins script name

--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -1,5 +1,1 @@
-// MIXINS: This partial loads global scope mixins.
-
-// Mixins imports
-@import "mixins/generate-custom-properties";
-@import "mixins/utilities";
+@import "mixins/typography";
