--- a/src/internal-mixins/_utilities.scss
+++ b/src/internal-mixins/_utilities.scss
@@ -6,7 +6,7 @@
 @use "sass:list";
 /*  stylelint-disable scss/at-if-no-null */
 
-// These mixins Create Utility class definitions from a utilities map.
+// These internal-mixins Create Utility class definitions from a utilities map.
 
 // Generate utilities
 // @arguments: $utility , $infix, $export
