--- a/src/components/FieldLabel/FieldLabel.module.scss
+++ b/src/components/FieldLabel/FieldLabel.module.scss
@@ -19,4 +19,5 @@
 .labelComponentText {
   @include vibe-text("small", "normal");
   @include theme-prop(color, primary-text-color);
+  padding-block: 2px;
 }
