--- a/src/components/Label/Label.module.scss
+++ b/src/components/Label/Label.module.scss
@@ -4,11 +4,12 @@
 @import "../../styles/keyframes";
 
 .label {
+  @include smoothing-text;
   display: inline-flex;
   align-items: center;
   justify-content: center;
   border-radius: $border-radius-small;
-  padding: 0 $spacing-small;
+  padding: 1px var(--spacing-small);
   position: relative;
 }
 
