--- a/src/components/Menu/MenuItem/MenuItem.module.scss
+++ b/src/components/Menu/MenuItem/MenuItem.module.scss
@@ -4,10 +4,11 @@
 @import "../../../styles/global-css-settings";
 
 .item {
+  @include smoothing-text;
   margin: unset;
   display: flex;
   flex-direction: row;
-  padding: $spacing-xs $spacing-small;
+  padding: var(--spacing-xs) var(--spacing-small);
   cursor: pointer;
   user-select: none;
   align-items: center;
@@ -74,6 +75,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   flex-grow: 1;
+  padding-block: 1px;
 }
 
 .label {
