--- a/src/components/Link/Link.module.scss
+++ b/src/components/Link/Link.module.scss
@@ -8,6 +8,7 @@
   align-items: center;
   color: var(--link-color);
   @include vibe-text(small, normal);
+  @include smoothing-text;
   text-decoration: none;
   writing-mode: horizontal-tb;
   @include focus-style();
