--- a/src/components/ProgressBars/LinearProgressBar/LinearProgressBar.module.scss
+++ b/src/components/ProgressBars/LinearProgressBar/LinearProgressBar.module.scss
@@ -7,6 +7,8 @@
   flex-direction: row;
   justify-content: center;
   width: 100%;
+  @include vibe-text(small, normal);
+  line-height: 8px !important;
 
   &.fullWidth {
     width: 100%;
