Convert text and title usages with mixins (#1400)
* migration text part 1

* fix snapshots

* linter

* tests

* code review fixes

* code review fixes

* code review fixes

* fix design review notes

* fix design review notes

* fix tests

* undo

* last fixes - ts

* fix tests

* fix tests

* convert to mixins

* fix snapshots according to the new mixin update

* wip

* wip

* fix foundation stories

* add paragraph story

* fix tests

* cr notes

* cr notes

* cr notes

* swall fixes

* last fixes

* last fixes

* fix

--- a/src/components/AttentionBox/AttentionBox.module.scss
+++ b/src/components/AttentionBox/AttentionBox.module.scss
@@ -6,16 +6,15 @@
   position: relative;
   padding: var(--spacing-medium);
   border-radius: var(--border-radius-medium);
-  font-size: var(--font-size-general-label);
   width: fit-content;
   height: fit-content;
   @include theme-prop(color, dark-color);
-  font-family: var(--font-family);
 }
 
 .title {
   margin: 0;
-  font-weight: 700;
+  font-weight: 700 !important;
+  padding: 0 var(--spacing-xs);
 }
 
 .textCompact {
@@ -80,4 +79,8 @@
 
 .titleContainerTitle {
   font-family: var(--title-font-family);
+}
+
+.paragraph {
+  margin: 0;
 }
