--- a/src/components/FieldLabel/FieldLabel.module.scss
+++ b/src/components/FieldLabel/FieldLabel.module.scss
@@ -17,6 +17,6 @@
 }
 
 .labelComponentText {
-  font: var(--font-general-label);
+  @include vibe-text("small", "normal");
   @include theme-prop(color, primary-text-color);
 }
