--- a/src/storybook/stand-alone-documentaion/typography-new/text-styles/text-styles.module.scss
+++ b/src/storybook/stand-alone-documentaion/typography-new/text-styles/text-styles.module.scss
@@ -1,4 +1,10 @@
 @import "../../../../styles/global-css-settings";
+@import "../../../../styles/typography";
+
+@include create-text-classes;
+
+@include create-title-classes;
+
 
 .visualExample {
   margin: var(--spacing-large) var(--spacing-large) var(--spacing-large) 0;
