Fix vibe typography instances 2 (#1412)
* migration text part 1

* fix snapshots

* linter

* tests

* code review fixes

* code review fixes

* code review fixes

* fix design review notes

* fix design review notes

* fix tests

* undo

* last fixes - ts

* fix tests

* fix tests

* convert to mixins

* fix snapshots according to the new mixin update

* wip

* wip

* fix foundation stories

* add paragraph story

* fix tests

* fix more components

* cr notes

* cr notes

* cr notes

* swall fixes

* last fixes

* last fixes

* self review fixes

* tests updates

* tests updates

* linter

* fix

* fix

* fix tests

--- a/src/components/AttentionBox/AttentionBox.module.scss
+++ b/src/components/AttentionBox/AttentionBox.module.scss
@@ -77,8 +77,9 @@
   top: calc(50% - 16px);
 }
 
-.titleContainerTitle {
-  font-family: var(--title-font-family);
+
+.paragraph {
+  margin: 0;
 }
 
 .paragraph {
