--- a/src/components/Menu/MenuTitle/MenuTitle.module.scss
+++ b/src/components/Menu/MenuTitle/MenuTitle.module.scss
@@ -3,7 +3,8 @@
 @import "../../../styles/global-css-settings";
 
 .title {
-  @include font-default;
+  @include smoothing-text;
+  padding-block: 1px;
 }
 
 .titleCaption {
@@ -35,5 +36,4 @@
   font-size: 0;
   line-height: 0;
   margin: 0 var(--spacing-small);
-  font-family: var(--font-family);
 }
