fix tests and leftovers of usage in old tokens

--- a/src/components/Avatar/AvatarContent.module.scss
+++ b/src/components/Avatar/AvatarContent.module.scss
@@ -14,7 +14,7 @@ $font-size-avatar-small: 12px;
 
 .contentText {
   font-family: var(--font-family);
-  font-weight: var(--font-weight-normal);
+  font-weight: 400;
   line-height: 21px;
   letter-spacing: -0.5px;
   display: flex;
