--- a/src/components/ListTitle/ListTitle.module.scss
+++ b/src/components/ListTitle/ListTitle.module.scss
@@ -2,7 +2,7 @@
 @import "../../styles/typography";
 
 .listTitle {
-  @include font-paragraph-bold();
+  @include smoothing-text;
   padding: var(--spacing-medium) var(--spacing-medium) var(--spacing-small);
   border-radius: var(--border-radius-small);
 }
