--- a/src/components/MenuButton/MenuButton.module.scss
+++ b/src/components/MenuButton/MenuButton.module.scss
@@ -60,13 +60,13 @@
 .size40 {
   width: 40px;
   height: 40px;
-  @include font-subtitle();
+  @include vibe-title(h3, normal);
 }
 
 .size48 {
   width: 48px;
   height: 48px;
-  @include font-title();
+  @include vibe-title(h2, normal);
 }
 
 .referenceIcon {
