--- a/src/components/storybook-helpers/description-label/description-label.scss
+++ b/src/components/storybook-helpers/description-label/description-label.scss
@@ -3,7 +3,7 @@
 .description-label{
   color: var(--secondary-text-color);
   font-family: var(--font-family);
-  font-weight: var(--font-weight-normal);
+  font-weight: 400;
   line-height: 24px;
   padding: 8px;
   white-space: pre-line;
