--- a/src/components/Icon/__stories__/description-label/description-label.scss
+++ b/src/components/Icon/__stories__/description-label/description-label.scss
@@ -1,6 +1,6 @@
-@import "../../../styles/typography";
+@import "../../../../styles/typography";
 
-.description-label{
+.description-label {
   color: var(--secondary-text-color);
   font-family: var(--font-family);
   font-weight: var(--font-weight-normal);
