--- a/src/components/Avatar/AvatarContent.module.scss
+++ b/src/components/Avatar/AvatarContent.module.scss
@@ -2,7 +2,6 @@
 $avatar-icon-large: 28px;
 $avatar-icon-medium: 18px;
 $avatar-icon-small: 12px;
-$font-size-avatar-medium: 14px;
 $font-size-avatar-small: 12px;
 
 .contentImg {
@@ -25,10 +24,11 @@ $font-size-avatar-small: 12px;
 
 .contentTextLarge {
   @include vibe-title("h3", "normal");
+  font-family: var(--font-family) !important;
 }
 
 .contentTextMedium {
-  font-size: $font-size-avatar-medium;
+  @include vibe-text("small", "normal");
   margin-top: 1px;
 }
 
